<resources>
    <string name="app_name">FREESTREAM</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>

    <string name="connecting">Connecting…</string>
    <string name="check_network_connection">Checking the network connection…</string>
    <string name="no_wifi">No wifi connected</string>
    <string name="device_not_found">Device not found, please check your wifi connection!</string>
    <string name="connect_failed_password">"Connect failed with wrong password!"</string>
    <string name="connect_failed">"Connect failed!"</string>
    <string name="sync_sd_failed">"Sync SDCard failed"</string>
    <string name="reconnect_failed">Reconnect failed, please check your wifi connection!</string>
    <string name="video_selection">Video</string>
    <string name="password_selection">Password</string>
    <string name="image_quality">Image Quality</string>
    <string name="smooth">Smooth</string>
    <string name="good">Good</string>
    <string name="best">Best</string>
    <string name="custom">Custom</string>
    <string name="resolution">Resolution</string>
    <string name="bit_rate">Bit Rate</string>
    <string name="frame_rate">Frame Rate</string>
    <string name="modify">Modify</string>
    <string name="ssid">SSID</string>
    <string name="current_ssid">Current WiFi SSID</string>
    <string name="current_password">Current Password</string>
    <string name="new_password">New Password</string>
    <string name="comfirm">Confirm</string>
    <string name="device">Device</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="version">Version</string>
    <string name="disclaimer">Disclaimer</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="copyright">Copyright</string>
    <string name="modify_video_sucess">Set video params success!</string>
    <string name="plz_connect">Please connect device first!</string>
    <string name="current_pass">Current password must be not empty</string>
    <string name="input_newpass">Please input newpassword</string>
    <string name="input_comfirm">Please input comfirm password</string>
    <string name="input_not_consistent">Two input password must be consistent</string>
    <string name="modify_password_sucess">Set password success!</string>
    <string name="reset_password_sucess">Reset password success!</string>
    <string name="library_photo">Photo</string>
    <string name="library_videos">Video</string>
    <string name="library_select">Select</string>
    <string name="library_cancel">Cancel</string>
    <string name="freestream2">Freestream 2.0</string>
    <string name="transmitter_id">Transmitter Device ID:</string>
    <string name="transmitter_ip">Transmitter IP Address:</string>
    <string name="firmware_update">Firmware Update</string>
    <string name="check_version">Check for new version</string>
    <string name="switch_wifi">Please switch the device wifi to common wifi</string>
    <string name="delete">Delete</string>
    <string name="share">Share</string>
    <string name="delete_no_photo">Please select one or more photos to delete</string>
    <string name="delete_no_video">Please select one or more videos to delete</string>
    <string name="delete_notice">Are you sure you want to delete?</string>
    <string name="share_no_photo">Please select only one photo to share</string>
    <string name="share_no_video">Please select only one video to share</string>
    <string name="share_to_facebook_success">"share to Facebook success !"</string>
    <string name="share_to_facebook_failure">"share to Facebook failure !"</string>
    <string name="share_to_youtube_success">"share to YouTube success !"</string>
    <string name="share_to_youtube_failure">"share to YouTube failure !"</string>
    <string name="share_to_instagram_success">"share to Instagram success !"</string>
    <string name="share_to_instagram_failure">"share to Instagram failure !"</string>
    <string name="cancel">Cancel</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="delete_success">Delete success !</string>

    <string name="network_disable">Network is disabled, please check your network connection !</string>
    
    <string name="youtube">YouTube</string>
    <string name="facebook">Facebook</string>
    <string name="instagram">Instagram</string>
    <string name="youtube_not_installed">Please download YouTube from Google Play first !</string>
    <string name="facebook_not_installed">Please download Facebook from Google Play first !</string>
    <string name="instagram_not_installed">Please download Instagram from Google Play first !</string>

    <string name="facebook_app_id">115586109153322</string>
    <string name="youtube_client_id">166089579442-n8pf4i5k6pd58tp9hijbt57ce3v5hlpj.apps.googleusercontent.com</string>

    <string name="device_wifi">"\"FREECAST_2C29D4\""</string>
    <string name="coming_soon">Coming soon</string>
    <string name="non_permission_tip">App does not have access to albums, please set up open permissions in the system</string>

</resources>
