<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:tools="http://schemas.android.com/tools"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:background="@color/gray_bg"
              android:orientation="vertical"
              android:padding="40dp"
    >

    <TextView
        style="@style/edit_text_title_style"
        android:layout_marginTop="20dp"
        android:text="@string/ssid"
        />

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/wifi_ssid"
            style="@style/password_edit_style"
            android:enabled="false"
            android:hint="@string/current_ssid"/>

        <ImageView
            android:id="@+id/wifi_status"
            android:layout_width="13dp"
            android:layout_height="15dp"
            style="@style/edit_right_img_style"
            android:src="@drawable/icon_wifi_pre"/>
    </FrameLayout>

    <View
        style="@style/edit_divider_line"/>

    <TextView
        style="@style/edit_text_title_style"
        android:text="@string/current_password"/>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/current_password_edit"
            style="@style/password_edit_style"
            android:hint="@string/current_password"/>

        <ImageView
            android:id="@+id/display_status_current"
            style="@style/edit_right_img_style"
            android:src="@drawable/diplay_status_selector"/>
    </FrameLayout>

    <View
        style="@style/edit_divider_line"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/text_blue"
        android:textSize="18sp"
        android:layout_marginTop="60dp"
        android:text="@string/device"/>

    <TextView
        style="@style/edit_text_title_style"
        android:layout_marginTop="20dp"
        android:text="@string/new_password"/>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/new_password_edit"
            style="@style/password_edit_style"
            android:hint="@string/new_password"/>

        <ImageView
            android:id="@+id/display_status_new"
            style="@style/edit_right_img_style"
            android:src="@drawable/diplay_status_selector"/>
    </FrameLayout>

    <View
        style="@style/edit_divider_line"/>

    <TextView
        style="@style/edit_text_title_style"
        android:text="@string/comfirm"/>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/comfirm_edit"
            style="@style/password_edit_style"
            android:hint="@string/comfirm"/>

        <ImageView
            android:id="@+id/display_status_comfirm"
            style="@style/edit_right_img_style"
            android:src="@drawable/diplay_status_selector"/>
    </FrameLayout>

    <View
        style="@style/edit_divider_line"/>

    <com.cloud4magic.freecast.widget.TouchAnimButton
        android:id="@+id/modify_button"
        android:text="@string/modify"
        style="@style/modify_button_style"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="40dp"
        />

    <TextView
        android:id="@+id/forgot_password_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="12sp"
        android:textColor="#b3b3b3"
        android:layout_marginTop="10dp"
        android:layout_gravity="right"
        android:text="@string/forgot_password"
        />
</LinearLayout>