<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:background="@drawable/shape_bg_share"
              android:orientation="vertical"
              android:padding="29dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <LinearLayout
            android:id="@+id/share_youtube"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:layout_width="42dp"
                android:layout_height="42dp"
                android:src="@drawable/ic_youtube"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="6dp"
                android:text="@string/youtube"
                android:textColor="@color/text_normal"
                android:textSize="8sp"/>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/share_facebook"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:layout_width="42dp"
                android:layout_height="42dp"
                android:src="@drawable/ic_facebook"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="6dp"
                android:text="@string/facebook"
                android:textColor="@color/text_normal"
                android:textSize="8sp"/>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/share_instagram"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:layout_width="42dp"
                android:layout_height="42dp"
                android:src="@drawable/ic_instagram"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="6dp"
                android:text="@string/instagram"
                android:textColor="@color/text_normal"
                android:textSize="8sp"/>

        </LinearLayout>

    </LinearLayout>

    <TextView
        android:id="@+id/share_cancel"
        android:layout_width="match_parent"
        android:layout_height="25dp"
        android:layout_marginTop="32dp"
        android:background="@drawable/selector_cancel"
        android:gravity="center"
        android:text="@string/cancel"
        android:textColor="@color/text_normal"
        android:textSize="12sp"/>

</LinearLayout>
